[package]
name = "opengl_overlay_hijack"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.59.0", features = ["Win32_Foundation", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_Graphics", "Win32_Graphics_OpenGL", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_Controls", "Win32_System_LibraryLoader"] }
skia-safe = { version = "0.81.0", features = ["gl"] }
str_crypter = "1.0.3"
rand = "0.9.0-beta.3"
fps_counter = "3.0.0"